Bug 402541 - Regression: Tabs never change back to "no new activity" colour
Summary: Regression: Tabs never change back to "no new activity" colour
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 18.12.0
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 396689 402621 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-24 22:38 UTC by Luke-Jr
Modified: 2018-12-28 00:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.1
Sentry Crash Report:


Attachments
fix for bug (585 bytes, patch)
2018-12-24 23:30 UTC, Luke-Jr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2018-12-24 22:38:57 UTC
SUMMARY

In prior versions (at least 18.04.3 and earlier), the text colour of tabs changed from black to dark purple when there was new content on the tab, and then changed back to black when the tab was selected.

With 18.12.0, the tabs change to dark purple, but never back to black when selected anymore.

STEPS TO REPRODUCE
1. Open two tabs.
2. In one tab, run "sleep 10 && echo". Immediately switch to the other tab.
3. After 10 seconds, the first tab will change to dark purple.
4. Select that dark-purple tab.

OBSERVED RESULT

The dark-purple tab remains dark purple, no matter what I do.

EXPECTED RESULT

Upon selecting the dark-purple tab, it should change back to black.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.3
Comment 1 Luke-Jr 2018-12-24 23:30:09 UTC
Created attachment 117096 [details]
fix for bug

Looks like this was broken by

commit 83ebda5bf4a31405af53fe8dc18797fb32fd6d5e
Author: Tomaz Canabrava <tcanabrava@kde.org>
Date:   Wed Jul 4 11:07:39 2018 +0200

    Use QTabBar: drop tons of code


...which dropped the currentTabChanged slot attachment for some reason.

Added it back (updated to current code) and things work again! (Patch attached)
Comment 2 Kurt Hindenburg 2018-12-25 01:52:45 UTC
I can't reproduce this on master; I'll try to figure out what fixed it and backport it
Comment 3 Luke-Jr 2018-12-25 02:25:02 UTC
On master, it looks like it was fixed in:

commit 7a43e3b2cde05a70a38c0bcac39051b675425bf9
Author: Tomaz Canabrava <tcanabrava@kde.org>
Date:   Mon Dec 10 10:01:09 2018 -0500

    Don't duplicate the tabs when Spliting the View

I'm not sure it makes sense to backport this, as it looks to be more involved than just fixing issues...?
Comment 4 Kurt Hindenburg 2018-12-25 02:56:19 UTC
Ok, I don't think I'm going to backport that - I'll look at your patch - thanks
Comment 5 Nate Graham 2018-12-26 04:48:20 UTC
Fixed on master already. Backport/alternative patch is possible.
Comment 6 Kurt Hindenburg 2018-12-26 14:47:12 UTC
Git commit 7dfae7a7b526706c3e2f27b54842d487f753db75 by Kurt Hindenburg.
Committed on 26/12/2018 at 14:44.
Pushed by hindenburg into branch 'Applications/18.12'.

Fix regression on tab color not reverting back to 'no activity' color

Already fixed in master with new tab code.
FIXED-IN: 18.12.1

M  +2    -0    src/ViewContainer.cpp

https://commits.kde.org/konsole/7dfae7a7b526706c3e2f27b54842d487f753db75
Comment 7 Christoph Feck 2018-12-27 10:56:55 UTC
*** Bug 396689 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2018-12-28 00:36:01 UTC
*** Bug 402621 has been marked as a duplicate of this bug. ***