Fix regression on tab color not reverting back to 'no activity' color

Already fixed in master with new tab code.

BUG: 402541
FIXED-IN: 18.12.1